Use List.of for all List instantiation