@@ -33,13 +33,15 @@ import org.springframework.data.domain.Sort;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class BoardServiceTest {
     private final BoardRepository boardRepository = mock(BoardRepository.class);
@@ -76,7 +78,7 @@ class BoardServiceTest {
 
 
         when(boardRepository.findAllByTeamIdOrderByDateCreatedDesc("team1", pageRequest))
-            .thenReturn(Collections.singletonList(savedBoard));
+            .thenReturn(List.of(savedBoard));
 
         List<Retro> actualRetros = boardService.getBoardsForTeamId("team1", 0);
 
